[package]
name = "taskr-api"
version = "0.1.0"
authors = ["Romain Sennat <romain-sennat@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0.0"
actix-cors = "^0.2.0"
actix-rt = "^1.0.0"
bson = "^0.13.0"
chrono = "^0.4.10"
confy = "^0.3.1"
mongodb = "^0.3.12"
serde = "^1.0.104"
serde_derive = "^1.0.104"
serde_json = "^1.0.47"
